--- a/src/app/dash-home/dash-home.component.html
+++ b/src/app/dash-home/dash-home.component.html
@@ -6,20 +6,18 @@
        <table class="table table-striped table-bordered">
     <thead>
         <tr>
-            <th>Num</th>
-            <th>nin</th>
-            <th>titre</th>
+            <th>code wilaya</th>
+            <th>libel wilaya</th>
+            <th>libel arab</th>
             <th>project</th>
             <th>adress</th>
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let avi of avis">
-            <td>{{avi.num}}</td>
-            <td>{{avi.nin}}</td>
-            <td>{{avi.titre}}</td>
-             
-
+        <tr *ngFor="let list of listWilaya">
+            <td>{{list.codew}}</td>
+            <td>{{list.libelFr}}</td>
+            <td>{{list.libelAr}}</td>
         </tr>
     </tbody>
        </table>     
